[gd_scene load_steps=43 format=2]

[ext_resource path="res://entities/enemies/beauty.gd" type="Script" id=1]
[ext_resource path="res://_glb/enemies/beauty.glb" type="PackedScene" id=2]
[ext_resource path="res://material/env/ancient/white_metal.material" type="Material" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 2.5

[sub_resource type="BoxShape" id=24]
extents = Vector3( 0.07414, 0.475523, 0.0965161 )

[sub_resource type="BoxShape" id=23]
extents = Vector3( 0.308838, 0.426879, 0.556172 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Animation" id=10]
resource_name = "Dash"
length = 1.7
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "end_windup"
}, {
"args": [  ],
"method": "end_move"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/hitboxes/dash_hitbox/CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "Dive"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "end_windup"
}, {
"args": [  ],
"method": "end_move"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Fire_Slow"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "end_windup"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [  ],
"method": "end_move"
} ]
}

[sub_resource type="Animation" id=48]
resource_name = "GravityPanic"
length = 2.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "end_windup"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [ -1 ],
"method": "fire"
}, {
"args": [  ],
"method": "end_move"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body/hitboxes/dash_hitbox/CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/Armature/Skeleton/forearm_r/hitbox/CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/Armature/Skeleton/forearm_l/hitbox/CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Swipe"
length = 1.8
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "end_windup"
}, {
"args": [  ],
"method": "end_move"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/Armature/Skeleton/forearm_l/hitbox/CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body/Armature/Skeleton/forearm_r/hitbox/CollisionShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="AnimationNodeOneShot" id=22]

[sub_resource type="AnimationNodeOneShot" id=21]
filter_enabled = true
filters = [ "Armature/Skeleton:BackLower", "Armature/Skeleton:Bicep.L", "Armature/Skeleton:Bicep.R", "Armature/Skeleton:C_Look", "Armature/Skeleton:Chest", "Armature/Skeleton:Collar.L", "Armature/Skeleton:Collar.R", "Armature/Skeleton:Hand.L", "Armature/Skeleton:Hand.R", "Armature/Skeleton:Head", "Armature/Skeleton:Index1.L", "Armature/Skeleton:Index1.R", "Armature/Skeleton:Index2.L", "Armature/Skeleton:Index2.L.001", "Armature/Skeleton:Index2.L.002", "Armature/Skeleton:Index2.R", "Armature/Skeleton:Index2.R.001", "Armature/Skeleton:Index2.R.002", "Armature/Skeleton:Index3.L", "Armature/Skeleton:Index3.L.001", "Armature/Skeleton:Index3.L.002", "Armature/Skeleton:Index3.R", "Armature/Skeleton:Index3.R.001", "Armature/Skeleton:Index3.R.002", "Armature/Skeleton:Lumbar", "Armature/Skeleton:NeckLower", "Armature/Skeleton:NeckUpper", "Armature/Skeleton:Radius.L", "Armature/Skeleton:Radius.R", "Armature/Skeleton:Thumb1.L", "Armature/Skeleton:Thumb1.L.001", "Armature/Skeleton:Thumb1.R", "Armature/Skeleton:Thumb1.R.001", "Armature/Skeleton:Ulna.L", "Armature/Skeleton:Ulna.R" ]

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Fire_Slow"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Fire_Slow"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Fall-loop"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "GravityStunned-loop"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "JumpCharge"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Idle-loop"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "WalkLevel-loop"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "SlideBack-loop"

[sub_resource type="AnimationNodeBlendSpace1D" id=27]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = 0.0
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = 1.0
blend_point_2/node = SubResource( 40 )
blend_point_2/pos = -1.0

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
xfade_time = 0.05

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Die/node = SubResource( 41 )
states/Die/position = Vector2( 365, -71 )
states/Fall/node = SubResource( 35 )
states/Fall/position = Vector2( 532, 102 )
states/GravityStunned/node = SubResource( 42 )
states/GravityStunned/position = Vector2( 398, 208 )
states/Jump/node = SubResource( 30 )
states/Jump/position = Vector2( 604, -7 )
states/JumpCharge/node = SubResource( 31 )
states/JumpCharge/position = Vector2( 365, 15 )
states/Walk/node = SubResource( 27 )
states/Walk/position = Vector2( 272, 102 )
transitions = [ "Walk", "JumpCharge", SubResource( 32 ), "JumpCharge", "Jump", SubResource( 33 ), "Jump", "Walk", SubResource( 34 ), "Jump", "Fall", SubResource( 36 ), "Fall", "Walk", SubResource( 37 ), "Walk", "Fall", SubResource( 38 ), "Walk", "GravityStunned", SubResource( 43 ), "Fall", "GravityStunned", SubResource( 44 ), "JumpCharge", "GravityStunned", SubResource( 45 ), "Jump", "GravityStunned", SubResource( 46 ), "GravityStunned", "Fall", SubResource( 47 ) ]
start_node = "Walk"
graph_offset = Vector2( -50, 23 )

[sub_resource type="AnimationNodeTimeScale" id=16]

[sub_resource type="AnimationNodeBlendTree" id=17]
graph_offset = Vector2( -550, 134 )
nodes/FullBody/node = SubResource( 22 )
nodes/FullBody/position = Vector2( 400, 200 )
nodes/HalfBody/node = SubResource( 21 )
nodes/HalfBody/position = Vector2( 160, 220 )
nodes/MoveFullBody/node = SubResource( 19 )
nodes/MoveFullBody/position = Vector2( 160, 420 )
nodes/MoveHalfBody/node = SubResource( 20 )
nodes/MoveHalfBody/position = Vector2( -80, 360 )
nodes/Movement/node = SubResource( 28 )
nodes/Movement/position = Vector2( -300, 220 )
nodes/WalkSpeed/node = SubResource( 16 )
nodes/WalkSpeed/position = Vector2( -60, 220 )
nodes/output/position = Vector2( 680, 220 )
node_connections = [ "WalkSpeed", 0, "Movement", "HalfBody", 0, "WalkSpeed", "HalfBody", 1, "MoveHalfBody", "FullBody", 0, "HalfBody", "FullBody", 1, "MoveFullBody", "output", 0, "FullBody" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="SphereShape" id=39]
radius = 0.312028

[node name="beauty" type="KinematicBody" groups=["dynamic", "enemy", "push", "target"]]
collision_layer = 65548
collision_mask = 3
moving_platform_exclude_mask = 65536
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
shape = SubResource( 1 )

[node name="body" parent="." instance=ExtResource( 2 )]

[node name="beauty" parent="body/Armature/Skeleton" index="0"]
material/0 = ExtResource( 3 )

[node name="chest" type="BoneAttachment" parent="body/Armature/Skeleton" index="1"]
transform = Transform( 1, -6.2544e-05, 0.000141142, 3.58884e-05, 0.983392, 0.181496, -0.000150149, -0.181496, 0.983392, 0.000145356, 2.38738, -0.0411997 )
bone_name = "Chest"

[node name="forearm_l" type="BoneAttachment" parent="body/Armature/Skeleton" index="2"]
transform = Transform( -0.482629, 0.223186, 0.846911, 0.0580689, -0.956704, 0.285212, 0.873898, 0.186831, 0.448772, 0.347414, 2.06422, -0.182372 )
bone_name = "Radius.L"

[node name="hitbox" type="Area" parent="body/Armature/Skeleton/forearm_l"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="body/Armature/Skeleton/forearm_l/hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
shape = SubResource( 24 )
disabled = true

[node name="gun" type="Position3D" parent="body/Armature/Skeleton/forearm_l"]
transform = Transform( 1, -2.98023e-08, 7.45058e-08, -1.49012e-07, 2.23517e-08, 1, -8.9407e-08, -1, 8.9407e-08, -4.61936e-07, 0.647203, -2.98023e-07 )

[node name="forearm_r" type="BoneAttachment" parent="body/Armature/Skeleton" index="3"]
transform = Transform( -0.48175, -0.215878, -0.849302, -0.0800448, -0.954289, 0.287968, -0.872645, 0.206711, 0.442449, -0.339196, 2.05401, -0.148128 )
bone_name = "Radius.R"

[node name="gun" type="Position3D" parent="body/Armature/Skeleton/forearm_r"]
transform = Transform( 1, -1.78814e-07, 0, -8.9407e-08, -7.45058e-08, 1, -2.98023e-08, -1, 8.9407e-08, -7.45058e-08, 0.657001, 2.98023e-07 )

[node name="hitbox" type="Area" parent="body/Armature/Skeleton/forearm_r"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="body/Armature/Skeleton/forearm_r/hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
shape = SubResource( 24 )
disabled = true

[node name="ulna_l" type="BoneAttachment" parent="body/Armature/Skeleton" index="4"]
transform = Transform( -0.489779, 0.186342, 0.8517, 0.101434, -0.958079, 0.267947, 0.865926, 0.217627, 0.450345, 0.347414, 2.06422, -0.182373 )
bone_name = "Ulna.L"

[node name="gun" type="Position3D" parent="body/Armature/Skeleton/ulna_l"]
transform = Transform( 1, 0, 0, 0, -2.23517e-08, 1, 0, -1, -8.19564e-08, -5.51343e-07, 0.648916, -5.96046e-07 )

[node name="ulna_r" type="BoneAttachment" parent="body/Armature/Skeleton" index="5"]
transform = Transform( -0.488569, -0.179039, -0.853959, -0.123288, -0.954736, 0.270703, -0.863771, 0.23754, 0.444381, -0.339196, 2.05401, -0.148128 )
bone_name = "Ulna.R"

[node name="gun" type="Position3D" parent="body/Armature/Skeleton/ulna_r"]
transform = Transform( 1, 0, 0, 0, -2.23517e-08, 1, 0, -1, -8.19564e-08, -5.51343e-07, 0.648916, -5.96046e-07 )

[node name="hitboxes" type="Spatial" parent="body"]

[node name="dash_hitbox" type="Area" parent="body/hitboxes"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="body/hitboxes/dash_hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07639, 0.571153 )
shape = SubResource( 23 )
disabled = true

[node name="NavigationAgent" type="NavigationAgent" parent="."]

[node name="Node" type="Node" parent="."]

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="Node"]
material_override = SubResource( 3 )

[node name="attack_anim" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 10 )
anims/Dive = SubResource( 12 )
anims/Fire_Slow = SubResource( 11 )
anims/GravityPanic = SubResource( 48 )
anims/RESET = SubResource( 9 )
anims/Swipe = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 17 )
anim_player = NodePath("../body/AnimationPlayer")
active = true
parameters/FullBody/active = false
parameters/HalfBody/active = false
parameters/Movement/playback = SubResource( 29 )
parameters/Movement/Walk/blend_position = -0.000964344
parameters/WalkSpeed/scale = 1.0

[node name="GroundArea" type="Area" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="GroundArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.204283, 0 )
shape = SubResource( 39 )

[connection signal="body_entered" from="body/Armature/Skeleton/forearm_l/hitbox" to="." method="_on_hitbox_entered"]
[connection signal="body_entered" from="body/Armature/Skeleton/forearm_r/hitbox" to="." method="_on_hitbox_entered"]
[connection signal="body_entered" from="body/hitboxes/dash_hitbox" to="." method="_on_hitbox_entered"]

[editable path="body"]
